<?xml version="1.0"?>
<package format="2">
  <name>rover_control</name>
  <version>0.0.1</version>
  <description>Navigation and Control Logic</description>
  <maintainer email="user@todo.todo">User</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>actionlib</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>moveit_commander</exec_depend>
  <exec_depend>rosbridge_suite</exec_depend>
  <exec_depend>web_video_server</exec_depend>
</package>
