<?xml version="1.0"?>
<package format="2">
  <name>rover_description</name>
  <version>0.0.1</version>
  <description>URDF Description of the 6-Wheel Rover</description>
  <maintainer email="user@todo.todo">User</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
</package>
