<?xml version="1.0"?>
<package format="2">
  <name>rover_pkg</name>
  <version>0.0.1</version>
  <description>Drivers and Firmware for 6-Wheel Rover</description>
  <maintainer email="user@todo.todo">User</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rosserial_python</exec_depend>
  <exec_depend>rosserial_arduino</exec_depend>
  <exec_depend>freenect_launch</exec_depend>
</package>
